--- a/TestDependencyInversion/TestDependencyInversion.csproj
+++ b/TestDependencyInversion/TestDependencyInversion.csproj
@@ -43,8 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Emailer.cs" />
+    <Compile Include="Factory.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="IMessenger.cs" />
+    <Compile Include="IPerson.cs" />
+    <Compile Include="ITask.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="Caller.cs" />
+    <Compile Include="LogToDatabase.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
+    <Compile Include="Texter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
